--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+    	<div class="container">
     	<div class="container-1">
     		<div class="backround-day">
     			<div class="bg-img-day-1"></div>
     			<div class="cloud"></div>
     			<div class="sun"></div>
     		</div>
+    	</div>
+    	<div class="container-1">
     		<div class="backround-night">
     			<div class="bg-img-night-1"></div>
     			<div class="stars"></div>
     			<div class="moon"></div>
     		</div>	
     	</div>
+        </div>
     </body>
   </html>
